fix bug in sidebar display cutting off sub items by reducing complexity in sidebar

--- a/less/components/sidebar.less
+++ b/less/components/sidebar.less
@@ -51,7 +51,7 @@ html.no-js .sidebar {
   transition: background-color @sidebarTransitionTime;
   color: white;
   font-size: 1.4rem;
-
+  padding: 0 0 1.5rem 0;
   a {
     color: inherit;
   }
@@ -62,8 +62,6 @@ html.no-js .sidebar {
   position: relative;
   font-size: 2rem;
   color: #595a5e; // TODO: should this actually be @bodyTextColor ?
-  margin-left: -(@grid-gutter-width / 2);
-  margin-right: -(@grid-gutter-width / 2);
   padding: 2rem 1.5rem;
   overflow: hidden;
   @media screen and (min-width: @screen-md-min) {
@@ -88,8 +86,7 @@ html.no-js .sidebar {
 }
 
 .sidebar-login {
-  padding-top: 1rem;
-  padding-bottom: 3rem;
+  padding: 1rem (@grid-gutter-width / 2) 3rem
 }
 
 .sidebar-menu {
@@ -107,7 +104,6 @@ html.no-js .sidebar {
   a {
     position: relative;
     display: block;
-    margin: 0 -(@grid-gutter-width / 2);
     padding: (@grid-gutter-width / 2) 0;
     @media screen and (min-width: @screen-lg-min) {
       padding: (@grid-gutter-width / 2);
@@ -167,6 +163,9 @@ html.no-js .sidebar {
   position: relative;
   top: 0;
 
+  @media screen and (min-width: @screen-lg-min) {
+    margin-left: 4.5rem;
+  }
   li {
     margin-bottom: 1.5rem;
     position: relative;
@@ -186,7 +185,6 @@ html.no-js .sidebar {
     padding: 0.5rem 1rem;
     position: relative;
     top: 1.4rem;
-    width: ~"calc(100% - 2.5rem)";
     font-weight: 600;
   }
 }
